--- a/Selly.WebApi/Selly.WebApi.csproj
+++ b/Selly.WebApi/Selly.WebApi.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Selly.Services.Email\Selly.Services.Email.csproj" />
+    <ProjectReference Include="..\Selly.Services\Selly.Services.csproj" />
+  </ItemGroup>
+
 </Project>
